<resources>
    <string name="app_name">Flags</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flags_with_friends">Flags with friends</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please enter your name.</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="what_country_does_this_flag_belong_to">What country does this flag belong to?</string>
    <string name="flag_count">%d/%d</string>
    <string name="submit">Submit</string>
    <string name="hey_congratulations">Hey, Congratulations!</string>
    <string name="result">Result</string>
    <string name="result_value">You scored %d out of %d.</string>
</resources>